# ProfileStamp

./: README.md  main.py  pyproject.toml
app/: pystamp.py
